
syntax = "proto3";
import "api/proto/global/Global.proto";
package cloud.lianmi.im.wallet;
option go_package = "github.com/lianmi/servers/api/proto/wallet";

//收款
message Collection{
    //UUID
    string uuid=1;

    //创建时间  
    fixed64  createdAt=2;

    //发送方用户注册号
    string FromUsername=3;

    //接收方用户注册号
    string ToUsername=4;

    //本次转账的用户连米币数量
	fixed64 amountLNMC=5;
    
    //多签合约地址
	//string contractAddress=6;
    
    //如果非空，则此次支付是对订单的支付，如果空，则为普通转账
	string orderID=7;
    
    //A签
	string signedTx=8;

    //成功执行合约的所在区块高度
	fixed64 blockNumber=9;

    //交易哈希
	string hash=10;
  
}


//充值
message Deposit{
    //UUID
    string uuid=1;

    //创建时间  
    fixed64  createdAt=2;

    //本次充值的人民币金额
	double recharge=3;
    
    //本次充值连米币数量
	fixed64 amountLNMC=4;

    //支付方式
	global.ThirdPartyPaymentType paymentType=5;
    
    //成功执行合约的所在区块高度
	fixed64 blockNumber=6;

    //交易哈希
	string hash=7;
  
}

//提现
message Withdraw{
    //UUID
    string uuid=1;

    //创建时间  
    fixed64  createdAt=2;

    //本次提现连米币数量
	fixed64 amountLNMC=3;

    //银行 
	string bank=4;

    //银行卡号 
	string bankCard=5;

    //银行卡持有人 
	string cardOwner=6;

    //状态
	int32 state=7;
    
    //用户私钥签名后的数据，hex格式
	//string SignedTx=8;
    
    //成功执行合约的所在区块高度
	fixed64 blockNumber=9;

    //交易哈希
	string hash=10;
  
}

//转账
message Transfer{
    //UUID
    string uuid=1;

    //创建时间  
    fixed64  createdAt=2;

    //接收者
	string ToUsername=3;

    //本次转账连米币数量
	fixed64 amountLNMC=4;

    //状态
	int32 state=6;
    
    //如果非空，则此次支付是对订单的支付，如果空，则为普通转账
	string orderID=7;

    //成功执行合约的所在区块高度
	fixed64 blockNumber=9;

    //交易哈希
	string hash=10;
  
}